Updated env name

--- a/email/index-dchq.html
+++ b/email/index-dchq.html
@@ -429,7 +429,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                       </tr>
                       <tr>
                         <td style="border-collapse: collapse; color: #343434; font-size: 28px; font-weight: 700; text-align: center; word-break: break-all; word-wrap: break-word;" valign="top">
-                           <font face="'Open Sans', sans-serif">Software Environments</font>
+                           <font face="'Open Sans', sans-serif">Deployment Environments</font>
                         </td>
                       </tr>
                       <tr>
