--- a/email/index-dchq.html
+++ b/email/index-dchq.html
@@ -483,11 +483,11 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                   <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="center">
                                       <font face="'Open Sans', sans-serif">
 
-                                          3+ Stack size, or<br/><br/>
-                                          6+ Team size, or<br/><br/>
-                                          Slow machines, or<br/><br/>
-                                          No knowledge shared<br/><br/>
-                                          Debugging time: 180hr/yr<br/><br/>
+                                          3+ Stack Size, or<br/><br/>
+                                          6+ Team Size, or<br/><br/>
+                                          Slow Machines, or<br/><br/>
+                                          No Knowledge Shared<br/><br/>
+                                          Debugging Time: 180hr/yr<br/><br/>
                                           <font color="red">Cost:
                                           </font>
                                           <span align="left" valign="middle" height="20" width="80" class="p30"
@@ -502,9 +502,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                   <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="center">
                                       <font face="'Open Sans', sans-serif">
 
-                                          Doesn't exists, or<br/><br/>
-                                          6+ Team size, or<br/><br/>
-                                          Functionality merge issues<br/><br/>
+                                          Doesn't Exists, or<br/><br/>
+                                          6+ Team Size, or<br/><br/>
+                                          Functionality Merge Issues<br/><br/>
                                           Debugging Time: 180hr/yr<br/><br/>
                                           <font color="red">Cost:</font>
                                           <span align="left" valign="middle" height="20" width="80" class="p30"
@@ -519,9 +519,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                   <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="right">
                                       <font face="'Open Sans', sans-serif">
 
-                                          Doesn't exists, or<br/><br/>
-                                          6+ Team size<br/><br/>
-                                          Customer submits issues<br/><br/>
+                                          Doesn't Exists, or<br/><br/>
+                                          6+ Team Size<br/><br/>
+                                          Customer Submits issues<br/><br/>
                                           <font color="red">Sales Cost:</font>
                                           <span align="left" valign="middle" height="20" width="80" class="p30"
                                                 style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">
@@ -551,7 +551,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                   <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="center">
                                       <font face="'Open Sans', sans-serif">
 
-                                          3- Stack size and<br/><br/>
+                                          3- Stack Size and<br/><br/>
                                           6- Team Size and<br/><br/>
                                           Fast Developer Machines<br/><br/>
                                           Knowledge Shared<br/><br/>
@@ -577,8 +577,8 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                       <font face="'Open Sans', sans-serif">
 
                                           Exists<br/><br/>
-                                          6- Team size<br/><br/>
-                                          Infrequent issues<br/><br/>
+                                          6- Team Size<br/><br/>
+                                          Infrequent Issues<br/><br/>
                                           Debugging Time: 90hr/yr<br/><br/>
 
                                           <font color="red">Compute Cost:</font>
@@ -606,9 +606,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                       <font face="'Open Sans', sans-serif">
 
                                           Exists<br/><br/>
-                                          No automation<br/><br/>
-                                          No dedicated testing<br/><br/>
-                                          Less Customer issues<br/><br/>
+                                          No Automation<br/><br/>
+                                          No Dedicated testing<br/><br/>
+                                          Less Customer Issues<br/><br/>
                                           <font color="red">Compute Cost:</font>
                                           <span align="left" valign="middle" height="20" width="80" class="p30"
                                                 style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">$500/yr<br/>
@@ -647,7 +647,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                           Partial Stack on VirtualBox or<br/><br/>
                                           Partial Stack on VM and<br/><br/>
                                           6+ team size<br/><br/>
-                                          Debugging knowledged shared*<br/><br/>
+                                          Debugging Knowledged Shared*<br/><br/>
                                           Debugging Time: 60hr/yr<br/><br/>
                                           <font color="red">Compute Cost:</font>
                                           <span align="left" valign="middle" height="20" width="80" class="p30"
@@ -667,9 +667,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
 
 
                                           Exists<br/><br/>
-                                          Refreshed manually or<br/><br/>
-                                          Refreshed Automatically or<br/><br/>
-                                          Push Button Refresh or<br/><br/>
+                                          Refreshed Manually, or<br/><br/>
+                                          Refreshed Automatically, or<br/><br/>
+                                          Push Button Refresh, or<br/><br/>
                                           CD Refresh<br/><br/>
                                           Debugging Time: 50hr/yr<br/><br/>
                                           <font color="red">Compute Cost:</font>
@@ -688,9 +688,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                       <font face="'Open Sans', sans-serif">
 
                                           Exists<br/><br/>
-                                          Partial automation<br/><br/>
-                                          Dedicated testing<br/><br/>
-                                          Min Customer issues<br/><br/>
+                                          Partial Automation<br/><br/>
+                                          Dedicated Testing<br/><br/>
+                                          Min Customer Issues<br/><br/>
                                           <font color="red">Sales Cost:</font>
                                           <span align="left" valign="middle" height="20" width="80" class="p30"
                                                 style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">$6K/yr<br/>
@@ -731,9 +731,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                           </tr>
                       </table>
 
-                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="0" cellspacing="2">
+                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:450px" align="left" cellpadding="0" cellspacing="2">
                           <tr>
-                              <td class="center" style="border-collapse: collapse; color: red; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top" align="center">
+                              <td class="center" style="border-collapse: collapse; color: red; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top">
                                   <br/><font face="'Open Sans', sans-serif"><strong>Red Zone</strong></font>
                               </td>
                           </tr>
@@ -749,8 +749,8 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; width: 212px;" valign="top" align="center">
                                   <font face="'Open Sans', sans-serif">
 
-                                      Doesn't exists<br/><br/>
-                                      Production downtimes<br/><br/>
+                                      Doesn't Exists<br/><br/>
+                                      Production Downtimes<br/><br/>
                                       <font color="red">Sales Cost:</font>
                                       <span align="left" valign="middle" height="20" width="80" class="p30"
                                             style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">$60K/yr
@@ -780,9 +780,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
 
                           </tr>
                       </table>
-                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="0" cellspacing="2">
+                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:450px" align="left" cellpadding="0" cellspacing="2">
                           <tr>
-                              <td class="center" style="border-collapse: collapse; color: orange; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top" align="center">
+                              <td class="center" style="border-collapse: collapse; color: orange; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top" >
                                   <br/><font face="'Open Sans', sans-serif"><strong>Orange Zone</strong></font>
                               </td>
                           </tr>
@@ -797,9 +797,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                   <font face="'Open Sans', sans-serif">
 
                                       Exists<br/><br/>
-                                      Not production replica<br/><br/>
-                                      less downtime<br/><br/>
-                                      manual deployments<br/><br/>
+                                      Not Production Replica<br/><br/>
+                                      Less Downtime<br/><br/>
+                                      Manual Deployments<br/><br/>
                                       <font color="red">Sales Cost:</font>
                                       <span align="left" valign="middle" height="20" width="80" class="p30"
                                             style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">$20K/yr<br/>
@@ -845,9 +845,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               </td>
                           </tr>
                       </table>
-                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="0" cellspacing="2">
+                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:450px" align="left" cellpadding="0" cellspacing="2">
                           <tr>
-                              <td class="center" style="border-collapse: collapse; color: green; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top" align="center">
+                              <td class="center" style="border-collapse: collapse; color: green; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top" >
                                   <br/><font face="'Open Sans', sans-serif"><strong>Green Zone</strong></font>
                               </td>
                           </tr>
@@ -863,10 +863,10 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               <font face="'Open Sans', sans-serif">
 
                                   Exists<br/><br/>
-                                  production replica<br/><br/>
-                                  Push button deployment<br/><br/>
-                                  Test Automation/manual<br/><br/>
-                                  Min Customer issues<br/><br/>
+                                  Production Replica<br/><br/>
+                                  Push Button Deployment<br/><br/>
+                                  Test Automation/Manual<br/><br/>
+                                  Min Customer Issues<br/><br/>
                                   <font color="red">Sales Cost:</font>
                                   <span align="left" valign="middle" height="20" width="80" class="p30"
                                         style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">$10K/yr<br/>
@@ -892,7 +892,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                       Yes Monitoring/Alerts<br/><br/>
                                       Yes DR(backup) Policy<br/><br/>
                                       Yes Security Policies<br/><br/>
-                                      Push Button deployment<br/><br/>
+                                      Push Button Deployment<br/><br/>
                                       <font color="red">Sales Cost:
                                       <span align="left" valign="middle" height="20" width="80" class="p30"
                                             style="color: red;  font-size: 16px;mso-line-height-rule:exactly; line-height: 29px;text-align: right;">$20K/yr<br/>
