--- a/email/index-dchq.html
+++ b/email/index-dchq.html
@@ -1063,9 +1063,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                     <table border="0" align="left" cellspacing="0" cellpadding="0" class="p100" style="mso-table-rspace: 0pt; mso-table-lspace: 0pt; border-collapse: collapse;">
                                        <tr>
                                           <td valign="top" align="center" >
+                                              <br><br>
                                              <table border="0" cellspacing="0" cellpadding="0" class="p90" style="mso-table-rspace: 0pt; mso-table-lspace: 0pt; border-collapse: collapse;">
                                                 <tr>
-                                                    <br/><br/>
                                                     <td style="border-collapse: collapse; color: #343434; font-size: 28px; font-weight: 700; text-align: center; word-break: break-all; word-wrap: break-word;" valign="top"><font face="'Open Sans', sans-serif">
                                                         Conclusion</font>
                                                     </td>
@@ -1237,9 +1237,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                              <b>Anders Fredriksson</b>  -  ‎Co-founder & CEO at ProLeads
                                              </font>
                                           </td>
-                                          <td align="right">
+                                          <!--<td align="right">
                                              <img src="images/s16_graphic1.png"  width="104" height="15"  style="display: block;" />
-                                          </td>
+                                          </td>-->
                                        </tr>
                                        <!-- |||||| End button |||||| -->
                                     </table>
@@ -1316,9 +1316,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                 <b>Martin Hecher</b>  -  ‎Software Architect at Fraunhofer Austria Research GmbH
                                                             </font>
                                                         </td>
-                                                        <td align="right">
+                                                        <!--<td align="right">
                                                             <img src="images/s16_graphic1.png"  width="104" height="15"  style="display: block;" />
-                                                        </td>
+                                                        </td>-->
                                                     </tr>
                                                     <!-- |||||| End button |||||| -->
                                                 </table>
