updated connect with us section

--- a/email/index-dchq.html
+++ b/email/index-dchq.html
@@ -228,8 +228,8 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               <td style="border-collapse: collapse;" valign="top" align="left">
                                 <table class="p100" style="border-collapse: collapse; margin: 0; mso-table-lspace: 0; mso-table-rspace: 0; padding: 0;" cellspacing="0" cellpadding="0" border="0">
                                   <tr>
-                                    <td class="center" style="border-collapse: collapse; color: #fff; font-size: 14px; line-height: 21px; word-break: break-all; word-wrap: break-word;" valign="top" align="left"><font face="'Open Sans', sans-serif">
-                                       Complete this Analysis and Find Out How Much <br/>Money You’re Wasting</font>
+                                    <td class="center" style="border-collapse: collapse; color: #fff; font-size: 14px; line-height: 21px;" valign="top" align="left"><font face="'Open Sans', sans-serif">
+                                       Complete this Analysis and Find Out How Much Money You’re Wasting</font>
                                     </td>
                                   </tr>
                                 </table>
@@ -341,10 +341,6 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                        </table>
                                     </td>
                                  </tr>
-                                 <tr>
-                                    <td height="40"></td>
-                                 </tr>
-
                                  <tr>
                                     <td height="60"></td>
                                  </tr>
@@ -1160,13 +1156,13 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                            <td valign="top">
                               <table height="93" border="0" cellspacing="0" cellpadding="0" width="600" class="p100" style="mso-table-rspace: 0pt; mso-table-lspace: 0pt; border-collapse: collapse;">
                                  <tr>
-                                    <td height="50"></td>
+                                    <td height="40"></td>
                                  </tr>
                                  <tr>
                                     <td align="center">
                                        <table border="0" align="center" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;border: 0px;" >
                                           <tr>
-                                             <td align="center" style="color: #343333; font-size: 18px;">
+                                             <td align="center" style="color: #343333; font-size: 28px;">
                                                 <font face="'Open Sans', sans-serif">
                                                 <b>TESTIMONIALS</b>
                                                 </font>
@@ -1178,16 +1174,16 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                  <tr>
                                     <td height="25"></td>
                                  </tr>
-                                 <tr>
-                                    <td align="center">
-                                       <table border="0" align="center" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;border: 0px;" >
-                                          <tr>
-                                             <td align="center" width="88" height="4" style="background: #d2d2d2;width: 88px; height: 4px;">
-                                             </td>
-                                          </tr>
-                                       </table>
-                                    </td>
-                                 </tr>
+                                 <!--<tr>-->
+                                    <!--<td align="center">-->
+                                       <!--<table border="0" align="center" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;border: 0px;" >-->
+                                          <!--<tr>-->
+                                             <!--<td align="center" width="88" height="4" style="background: #d2d2d2;width: 88px; height: 4px;">-->
+                                             <!--</td>-->
+                                          <!--</tr>-->
+                                       <!--</table>-->
+                                    <!--</td>-->
+                                 <!--</tr>-->
                               </table>
                            </td>
                         </tr>
@@ -1330,6 +1326,10 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                     </table>
                                 </td>
                             </tr>
+                            <tr>
+                                <td height="40" style="font-size: 10px; line-height: 25px;">&nbsp;</td>
+                            </tr>
+
                         </table>
                     </td>
                 </tr>
@@ -1353,6 +1353,45 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
 <!-- `````````````````````````````````````````````````````````````````````````````````````````````-->
 <!-- `````````````````````````````````````````|  Section 21 |`````````````````````````````````````-->
 <!-- `````````````````````````````````````````````````````````````````````````````````````````````-->
+<table align="center" border="0" cellpadding="0" cellspacing="0" style="margin: 0; padding: 0;background: #cecece;" bgcolor="#cecece" width="100%">
+    <tr>
+        <td align="center" valign="top">
+            <table align="center" width="800" border="0" cellspacing="0" cellpadding="0" class="p100" bgcolor="#fafafa" style="mso-table-rspace: 0pt; mso-table-lspace: 0pt; border-collapse: collapse;">
+                <tr>
+                    <td align="center" valign="top">
+                        <table border="0" cellpadding="0" cellspacing="0" class="p100" width="600" style="mso-table-rspace: 0pt; mso-table-lspace: 0pt; border-collapse: collapse;" >
+                            <tr>
+                                <td valign="top">
+                                    <table height="53" border="0" cellspacing="0" cellpadding="0" width="600" class="p100" style="mso-table-rspace: 0pt; mso-table-lspace: 0pt; border-collapse: collapse;">
+                                        <tr>
+                                            <td height="50"></td>
+                                        </tr>
+                                        <tr>
+                                            <td align="center">
+                                                <table border="0" align="center" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;border: 0px;" >
+                                                    <tr>
+                                                        <td align="center" style="color: #343333; font-size: 28px;">
+                                                            <font face="'Open Sans', sans-serif">
+                                                                <strong>Connect with Us</strong>
+                                                            </font>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+
+                                    </table>
+
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
 
 <table align="center" border="0" cellpadding="0" cellspacing="0" style="margin: 0; padding: 0;background: #cecece;" bgcolor="#cecece" width="100%">
     <tr>
@@ -1382,9 +1421,6 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                 <!-- |||||| Image 3 from 3 column section 6 |||||| -->
 
                                                                 <!-- |||||| End image 3 from 3 column section 6 |||||| -->
-                                                                <tr>
-                                                                    <td height="25" style="font-size: 10px; line-height: 25px;">&nbsp;</td>
-                                                                </tr>
                                                                 <tr>
                                                                     <td align="left" style="color: #000; font-family: 'Open Sans', sans-serif; font-size: 19px;line-height: 23px;">
                                                                         <!-- ||||||  Text 1 in 3 column section 6 |||||| -->
@@ -1421,9 +1457,6 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                     </td>
                                                                 </tr>
                                                                 <!-- |||||| End button |||||| -->
-                                                                <tr>
-                                                                    <td height="50" style="font-size: 10px; line-height: 50px;">&nbsp;</td>
-                                                                </tr>
                                                             </table>
                                                         </td>
                                                     </tr>
@@ -1470,9 +1503,6 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
 
                                                                 <!-- |||||| End image 2 from 2 column section 6 |||||| -->
                                                                 <tr>
-                                                                    <td height="25" style="font-size: 10px; line-height: 25px;">&nbsp;</td>
-                                                                </tr>
-                                                                <tr>
                                                                     <td align="left" style="color: #000; font-family: 'Open Sans', sans-serif; font-size: 19px;line-height: 23px;">
                                                                         <!-- ||||||  Text 1 in 2 column section 6 |||||| -->
                                                                         Features
@@ -1498,7 +1528,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                                 <td align="center" valign="middle" style="color:#FFFFFF;font-size:12px; font-weight:regular; padding-right:24px; padding-left:24px;">
                                                                                     <a href="http://dchq.co/features.html" target="_blank" style="color:#FFFFFF; text-decoration:none;" >
                                                                                         <font face="'Open Sans', sans-serif">
-                                                                                            Learn
+                                                                                            Explore
                                                                                         </font>
                                                                                     </a>
                                                                                 </td>
@@ -1552,9 +1582,6 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                 <!-- |||||| Image 1 from 1 column section 6 |||||| -->
 
                                                                 <!-- |||||| End image 1 from 1 column section 6 |||||| -->
-                                                                <tr>
-                                                                    <td height="25" style="font-size: 10px; line-height: 25px;">&nbsp;</td>
-                                                                </tr>
                                                                 <tr>
                                                                     <td align="left" style="color: #000; font-family: 'Open Sans', sans-serif; font-size: 19px;line-height: 23px;">
                                                                         <!-- ||||||  Text 1 in 1 column section 6 |||||| -->
@@ -1664,9 +1691,9 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                     </td>
                                                                 </tr>
                                                                 <!-- |||||| End button |||||| -->
-                                                                <tr>
-                                                                    <td height="50" style="font-size: 10px; line-height: 50px;">&nbsp;</td>
-                                                                </tr>
+                                                                <!--<tr>-->
+                                                                    <!--<td height="50" style="font-size: 10px; line-height: 50px;">&nbsp;</td>-->
+                                                                <!--</tr>-->
                                                             </table>
                                                         </td>
                                                     </tr>
@@ -1984,7 +2011,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                                 <td align="center" valign="middle" style="color:#FFFFFF;font-size:12px; font-weight:regular; padding-right:24px; padding-left:24px;">
                                                                                     <a href="http://dchq.co/blogs.html" target="_blank" style="color:#FFFFFF; text-decoration:none;" >
                                                                                         <font face="'Open Sans', sans-serif">
-                                                                                            Explore
+                                                                                            Learn
                                                                                         </font>
                                                                                     </a>
                                                                                 </td>
@@ -2067,7 +2094,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                                                                 <td align="center" valign="middle" style="color:#FFFFFF;font-size:12px; font-weight:regular; padding-right:24px; padding-left:24px;">
                                                                                     <a href="http://dchq.co/contact-us.html" target="_blank" style="color:#FFFFFF; text-decoration:none;" >
                                                                                         <font face="'Open Sans', sans-serif">
-                                                                                            Sign Up
+                                                                                            Find Out
                                                                                         </font>
                                                                                     </a>
                                                                                 </td>
