--- a/email/index-dchq.html
+++ b/email/index-dchq.html
@@ -229,7 +229,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                 <table class="p100" style="border-collapse: collapse; margin: 0; mso-table-lspace: 0; mso-table-rspace: 0; padding: 0;" cellspacing="0" cellpadding="0" border="0">
                                   <tr>
                                     <td class="center" style="border-collapse: collapse; color: #fff; font-size: 14px; line-height: 21px;  " valign="top" align="left"><font face="'Open Sans', sans-serif">
-                                       Complete this Analysis and Find Out How Much Money You’re Wasting.</font>
+                                       Complete this Test and Find Out How Much Money You’re Wasting.</font>
                                     </td>
                                   </tr>
                                 </table>
@@ -325,15 +325,15 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
 
 
                                                 <font face="'Open Sans', sans-serif">
-                                                   The only thing driving such startups is getting quick market validation. As a result, developers will take the easiest route to get there without worrying about Issues like software quality, scalability, continuous delivery, and application management in production.
+                                                   The only thing driving such startups is getting quick market validation. &nbsp;As a result, developers will take the easiest route to get there without worrying about issues like software quality, scalability, continuous delivery, and application management in production.
                                                 </font><br/><br/>
 
                                                 <font face="'Open Sans', sans-serif">
-                                                   As soon startups move from market validation to the growth stage, then an unstructured software development process may end up being very costly and in some cases, catastrophic. Onboarding new developers becomes a pain, the software quality suffers, and a lot of time is wasted in setting up environments.
+                                                   As soon startups move from market validation to the growth stage, then an unstructured software development process may end up being very costly and in some cases, catastrophic. &nbsp;Onboarding new developers becomes a pain, the software quality suffers, and a lot of time is wasted in setting up environments.
                                                 </font> <br/> <br/>
 
                                                 <font face="'Open Sans', sans-serif">
-                                                   In this paper, you will get a chance to understand the best practices for the different stages (or phases) of application development. Get ready for the test and see where your startup stands.
+                                                   In this paper, you will get a chance to understand the best practices for the different stages (or phases) of application development. &nbsp;Get ready for the test and see where your startup stands.
                                                 </font>
 
                                              </td>
@@ -448,7 +448,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
 
                       <!-- Columns -->
 
-                          <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:700px"  cellspacing="0">
+                          <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:700px;table-layout:fixed;"  cellspacing="0">
                               <tr>
                                   <td class="center" style="border-collapse: collapse; color: #343434; font-size: 19px; font-weight: 400; letter-spacing: 0; text-align: left; width: 234px" valign="top"  align="center">
                                       <font face="'Open Sans', sans-serif">Developer Machine</font>
@@ -462,7 +462,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               </tr>
                           </table>
 
-                          <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="0" cellspacing="2">
+                          <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%;" cellpadding="0" cellspacing="2">
                               <tr>
                                   <td class="center" style="border-collapse: collapse; color: red; font-size: 12px; font-weight: 400; letter-spacing: 0.1em; line-height: 23px; text-align: left; text-transform: uppercase;" valign="top" align="center">
                                       <br/><font face="'Open Sans', sans-serif"><strong>Red Zone</strong></font>
@@ -474,7 +474,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               </tr>
                           </table>
 
-                          <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="9" cellspacing="2">
+                          <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%;table-layout:fixed;" cellpadding="9" cellspacing="2">
                               <tr>
                                   <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="center">
                                       <font face="'Open Sans', sans-serif">
@@ -542,13 +542,13 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                               </td>
                           </tr>
                       </table>
-                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="9" cellspacing="2">
+                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%;table-layout:fixed;" cellpadding="9" cellspacing="2">
                               <tr>
                                   <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="center">
                                       <font face="'Open Sans', sans-serif">
 
-                                          3- Stack Size and<br/><br/>
-                                          6- Team Size and<br/><br/>
+                                          3- Stack Size, and<br/><br/>
+                                          6- Team Size, and<br/><br/>
                                           Fast Developer Machines<br/><br/>
                                           Knowledge Shared<br/><br/>
                                           Debugging Time: 90hr/yr<br/><br/>
@@ -635,13 +635,13 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                           </tr>
                       </table>
 
-                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="9" cellspacing="2">
+                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%;table-layout:fixed;" cellpadding="9" cellspacing="2">
                               <tr>
-                                  <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; width: 224px;" valign="top" align="center">
+                                  <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; " valign="top" align="center">
                                       <font face="'Open Sans', sans-serif">
 
-                                          Partial Stack on VirtualBox or<br/><br/>
-                                          Partial Stack on VM and<br/><br/>
+                                          Partial Stack on VirtualBox, or<br/><br/>
+                                          Partial Stack on VM, and<br/><br/>
                                           6+ team size<br/><br/>
                                           Debugging Knowledged Shared*<br/><br/>
                                           Debugging Time: 60hr/yr<br/><br/>
@@ -739,10 +739,10 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                           </tr>
                       </table>
 
-                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="9" cellspacing="2">
+                      <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%;table-layout:fixed;" cellpadding="9" cellspacing="2">
                           <tr>
 
-                              <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; width: 212px;" valign="top" align="center">
+                              <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; width: 215px;" valign="top" align="center">
                                   <font face="'Open Sans', sans-serif">
 
                                       Doesn't Exists<br/><br/>
@@ -789,7 +789,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                       </table>
                       <table border="0" style="border-collapse:collapse;border:0px solid #FFFFFF;color:#000000;width:100%" cellpadding="9" cellspacing="2">
                           <tr>
-                              <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; width: 212px;" valign="top" align="center">
+                              <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left; width: 215px;" valign="top" align="center">
                                   <font face="'Open Sans', sans-serif">
 
                                       Exists<br/><br/>
@@ -815,9 +815,7 @@ Preheader text shows up in GMail, iOS, Mail.app, &amp; more: 75 text char limit.
                                   </font>
                               </td>
                               <td class="center" style="border-collapse: collapse; color: #8b8b8b; font-size: 14px; font-weight: 400; letter-spacing: 0.02em; line-height: 16px; text-align: left;" valign="top" align="center">
-                                  <font face="'Open Sans', sans-serif"><br/>
-
-
+                                  <font face="'Open Sans', sans-serif">
                                       No High-Availability<br/><br/>
                                       No Load-Balancing<br/><br/>
                                       No Monitoring/Alerts<br/><br/>
